some more formatting, element fixes

--- a/less/focalendar.less
+++ b/less/focalendar.less
@@ -1,10 +1,14 @@
-.row-fluid { padding:1em; }
+html { padding:1em; }
 
 @red:#fbb;
 @green:#bfb;
 @blue:#bbf;
 
+h2 { font-size:2em; padding-left:.5em; }
+
 .calendar { background:#f8f8f8; color:#000; text-shadow:0 1px 0 #fff; border:1px solid #eee; border-radius:.3em; padding:1em; }
 .red { background:@red; text-shadow-color:0 1px 0 lighten(@red,10%); border-color:darken(@red,10%); }
 .green { background:@green; text-shadow-color:0 1px 0 lighten(@green,10%); border-color:darken(@green,10%); }
 .blue { background:@blue; text-shadow-color:0 1px 0 lighten(@blue,10%); border-color:darken(@blue,10%); }
+
+.vevent { }
