putting input field at cursor position

--- a/less/focalendar.less
+++ b/less/focalendar.less
@@ -12,3 +12,4 @@ h2 { font-size:2em; padding-left:.5em; }
 .blue { background:@blue; text-shadow-color:0 1px 0 lighten(@blue,10%); border-color:darken(@blue,10%); }
 
 .vevent { }
+#newevent { position:absolute; }
