--- a/less/focalendar.less
+++ b/less/focalendar.less
@@ -8,14 +8,18 @@ html, body { background:#eee; }
 h2 { font-size:2em; padding-left:.5em; }
 
 .grid { border-top:1px dotted #bbb; position:relative; }
-.grid h3 { font-size:10em; margin:.5em .1em; text-shadow:0 1px 0 #fff; color:rgba(0,0,0,.13); }
-#today, #tomorrow { height:40%; }
-#week, #week2 { height:40%; }
-#month, #month2 { height:40%; }
-#year, #year2 { height:40%; }
-#decade, #decade2 { height:40%; }
+.grid h3 { margin:.5em .1em; text-shadow:0 1px 0 #fff; color:rgba(0,0,0,.13); }
+.today, .tomorrow { height:34%; h3{font-size:8em;} }
+.week { height:21%; h3{font-size:5em;} }
+.week2 { height:13%; h3{font-size:3em;} }
+.month { height:8%; h3{font-size:2em;} }
+.month2 {  }
+.year {  }
+.year2 {  }
+.decade {  }
+.decade2 {  }
 
-html, body, div.row-fluid, .row-fluid>div { height:100%; }
+html, body { height:100%; }
 
 .calendars { position:absolute; top:0; width:100%; }
 
@@ -28,3 +32,5 @@ html, body, div.row-fluid, .row-fluid>div { height:100%; }
 .vevent { background:rgba(255,255,255,.4); padding:1em; margin:0em -1em .5em; }
 .vevent .summary { color:#000; font-weight:bold; }
 .event { position:absolute; width:89%; height:1.5em; }
+
+.weekend { background:rgba(255,255,255,.7); }
