changing grid structure

--- a/less/focalendar.less
+++ b/less/focalendar.less
@@ -7,8 +7,10 @@ html, body { background:#eee; }
 
 h2 { font-size:2em; padding-left:.5em; }
 
-.grid { border-top:1px dotted #bbb; position:relative; }
-.grid h3 { margin:.5em .1em; text-shadow:0 1px 0 #fff; color:rgba(0,0,0,.13); }
+#grid { position:absolute; width:100%; height:100%; }
+#grid .row-fluid { border-top:1px dotted #bbb; position:relative; }
+#grid .row-fluid h3 { margin:.5em .1em; text-shadow:0 1px 0 #fff; color:rgba(0,0,0,.13); }
+
 .today, .tomorrow { height:34%; h3{font-size:8em;} }
 .week { height:21%; h3{font-size:5em;} }
 .week2 { height:13%; h3{font-size:3em;} }
