adding remoteStorage sync boilerplate

--- a/less/focalendar.less
+++ b/less/focalendar.less
@@ -34,6 +34,6 @@ html, body { height:100%; }
 
 .vevent { background:rgba(255,255,255,.34); padding:1em; margin:0 0 1em; }
 .vevent .summary { color:#000; font-weight:bold; }
-.event { position:absolute; width:89%; height:1.5em; }
+.event { position:absolute; width:89%; min-height:1.5em; background:rgba(255,255,255,.1); }
 
 .weekend { background:rgba(255,255,255,.7); }
