--- a/less/focalendar.less
+++ b/less/focalendar.less
@@ -25,7 +25,7 @@ html, body { height:100%; }
 
 .calendars { position:absolute; top:0; width:100%; }
 
-.calendar { position:relative; background:#f8f8f8; color:#000; text-shadow:0 1px 0 #fff; border:0; padding:4em 1em 1em 1em; }
+.calendar { position:relative; background:#f8f8f8; color:#000; text-shadow:0 1px 0 #fff; border:0; padding:4em 1em 1em 1em; height:100em; }
 .row-fluid [class*="span"] { margin-left:0; }
 .red { background:@red; text-shadow-color:0 1px 0 lighten(@red,10%); }
 .green { background:@green; text-shadow-color:0 1px 0 lighten(@green,10%); }
