--- a/less/focalendar.less
+++ b/less/focalendar.less
@@ -1,3 +1,7 @@
+
+
+
+
 html, body { background:#eee; }
 
 @red:rgba(255,187,187,.3);
@@ -32,8 +36,8 @@ html, body { height:100%; }
 .blue { background:@blue; text-shadow-color:0 1px 0 lighten(@blue,10%); }
 .orange { background:@orange; text-shadow-color:0 1px 0 lighten(@orange,10%); }
 
-.vevent { background:rgba(255,255,255,.34); padding:1em; margin:0 0 1em; }
-.vevent .summary { color:#000; font-weight:bold; }
+.vevent { background:rgba(255,255,255,.34); padding:0 1em 0 1em; margin:0 0 2px 0 ; box-sizing: border-box; border-left: 1px solid black;} /* paddimng was 1em, margin was 0 0 1em */
+.vevent .summary { color:#000; font-weight:bold; box-sizing: border-box;}
 .event { position:absolute; width:89%; height:1.5em; background:rgba(255,255,255,.1); }
 
 .weekend { background:rgba(255,255,255,.7); }
