put script into js-file

--- a/less/focalendar.less
+++ b/less/focalendar.less
@@ -40,4 +40,6 @@ html, body { height:100%; }
 .vevent .summary { color:#000; font-weight:bold; box-sizing: border-box;}
 .event { position:absolute; width:89%; height:1.5em; background:rgba(255,255,255,.1); }
 
+.demovevent { width:83%; background:rgba(255,255,255,.34); padding:0 1em 0 1em; margin:0 0 2px 0 ; box-sizing: border-box; border-left: 1px solid black;} /* paddimng was 1em, margin was 0 0 1em */
+
 .weekend { background:rgba(255,255,255,.7); }
