--- a/style/main.css
+++ b/style/main.css
@@ -25,6 +25,10 @@ body, html {
   position: -moz-sticky;
   position: -ms-sticky;
   position: -o-sticky;
+  cursor: default;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 
@@ -38,8 +42,9 @@ body, html {
 
 .day {
   list-style: none;
-  padding: 7px 15px 7px 15px;
+  padding-right: 15px;
   min-height: 33px;
+  cursor: pointer;
 }
 
 .day:nth-child(even) {
@@ -50,7 +55,12 @@ body, html {
   color: #535353;
   font-weight: 500;
   float: left;
-  padding: 7px 0;
+  padding: 15px 15px 15px 15px;
+  width: 60px;
+  cursor: default;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 
@@ -71,8 +81,8 @@ body, html {
 
 .events {
   float: left;
-  padding: 0 10px;
-  width: 80%;
+  padding: 8px 0 0 10px;
+  width: 70%;
 }
 
 .event {
