--- a/style/main.css
+++ b/style/main.css
@@ -6,9 +6,40 @@ body, html {
 }
 
 
+a {
+  color: #363636;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
 
 .clear {
   clear: both;
+}
+
+
+
+.menu {
+  position: fixed;
+  top: 0;
+  background: #fff;
+  width: 100%;
+  padding: 10px 15px;
+  z-index: 1;
+  box-shadow: 0px 0px 10px -3px #C2C2C2;
+}
+
+/* mobile */
+@media (max-width: 720px) {
+  .menu {
+    top: inherit;
+    bottom: 0;
+  }
+}
+
+
+.today-link {
+  text-decoration: none;
 }
 
 
@@ -67,10 +98,6 @@ body, html {
 #today {
   border-top: 1px solid #424242;
   border-bottom: 1px solid #424242;
-}
-
-#today .day-label {
-  color: #000;
 }
 
 .past {
